# cycpd

./: .gitignore  .travis.yml  CONTRIBUTING.md  LICENSE  Makefile  README.MD  _version.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build-test.yml  building-pypi-linux.yml  (+3 more)
cycpd/: __init__.py  affine_registration.py  deformable_registration.py  expectation_maximization_registration.py  rigid_registration.py
data/: surface_points_bone_1_5k_points.npy  surface_points_bone_2_5k_points.npy  surface_points_bone_2_rigid_register_to_1_5k_points.npy  surface_points_bone_deformable_target.npy
docs/: affine_registration.html  deformable_registration.html  expectation_maximization_registration.html  index.html
examples/: deformable_0001.tiff  deformable_0002.tiff  deformable_0003.tiff  deformable_0004.tiff  deformable_0005.tiff  deformable_0006.tiff  deformable_0007.tiff  deformable_0008.tiff  deformable_0009.tiff  deformable_0010.tiff  deformable_0011.tiff  deformable_0012.tiff  deformable_0013.tiff  deformable_0014.tiff  deformable_0015.tiff  deformable_0016.tiff  deformable_0017.tiff  deformable_0018.tiff  deformable_0019.tiff  deformable_0020.tiff  deformable_0021.tiff  deformable_0022.tiff  deformable_0023.tiff  deformable_0024.tiff  deformable_0025.tiff  deformable_0026.tiff  deformable_0027.tiff  deformable_0028.tiff  deformable_0029.tiff  deformable_0030.tiff  deformable_0031.tiff  deformable_0032.tiff  deformable_0033.tiff  deformable_0034.tiff  deformable_0035.tiff  deformable_0036.tiff  deformable_0037.tiff  deformable_0038.tiff  deformable_0039.tiff  deformable_0040.tiff  (+63 more)
test_time/: affine_test.py  deformable_test.py  rigid_test.py  timing_test_affine.py  timing_test_deformable.py  timing_test_rigid.py
testing/: affine_test.py  deformable_test.py  rigid_test.py
(+7 files in other folders)
