[build-system]
requires = ["setuptools>=45", "wheel", "Cython >= 0.29", "numpy", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 100
include_trailing_comma = true
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
known_first_party = ["cython_functions"]


[tool.black]
line-length = 100
exclude = '''

(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

# Information needed for cibuildwheel
[tool.cibuildwheel]
# build options: https://cibuildwheel.readthedocs.io/en/stable/options/#build-selection
build = ["cp37-*", "cp38-*", "cp39-*", "cp310-*", "cp311-*]
skip = ["*-win32", "*i686", "*aarch64", "*ppc64le", "*s390x", "*musllinux*"]

# testing info: https://cibuildwheel.readthedocs.io/en/stable/options/#testing
test-command = "pytest {project}"
test-requires = ["pytest"]

[tool.cibuildwheel.macos]
archs-macos = ["universal2", "x86_64"]


# https://github.com/pypa/setuptools_scm/
# [tool.setuptools_scm]

